--- a/io_prj_server/views/about.ejs
+++ b/io_prj_server/views/about.ejs
@@ -22,14 +22,16 @@
         </nav>
     </header>
 
-    <main>
-        <h1>O nas</h1>
+    <main id="main_about">
         <section id="about">
+            <h1>O nas</h1>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis, vitae praesentium consectetur deserunt reiciendis illum? 
                 Neque rem quod fuga ipsum totam, nihil enim dolorem? Quod reprehenderit deleniti rem atque beatae. 
                 Provident facilis eos et voluptates quas? Asperiores architecto aliquam labore excepturi sint, nemo officiis
                  quasi aut quia, voluptatem perferendis repudiandae!
             </p>
         </section>
+    </main>
+
 </body>
 </html>
