--- a/io_prj_server/views/faq.ejs
+++ b/io_prj_server/views/faq.ejs
@@ -22,7 +22,7 @@
         </nav>
     </header>
 
-    <main>
+    <main class="faq">
         <section id="questions">
             <div class="question-container">
               <div class="question-title">Question 1</div>
@@ -43,7 +43,7 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section id="form">
             <h1>Napisz do nas!</h1>
             <div class="email-box">
                 <label for="email">Twój email:</label><br>
