--- a/io_prj_server/views/logged.ejs
+++ b/io_prj_server/views/logged.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Strona Główna</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='../public/stylesheets/style.css' />
 </head>
 <body>
     <header>
