--- a/io_prj_server/views/logged.ejs
+++ b/io_prj_server/views/logged.ejs
@@ -14,8 +14,8 @@
             <ul>
                 <li><a href="/projekty">Projekty</a></li>
                 <li><a href="/update">Update'y</a></li>
-                <li><a href="/informacje">Informacje</a></li>
-                <li><a href="/pomoc">Pomoc</a></li>
+                <li><a href="/about">Informacje</a></li>
+                <li><a href="/faq">Pomoc</a></li>
                 <li><a href="/profil" class="blue-button">Profil</a></li>
                 <li><a href="/wyloguj" class="blue-button">Wyloguj się</a></li>
             </ul>
