--- a/io_prj_server/views/register.ejs
+++ b/io_prj_server/views/register.ejs
@@ -18,7 +18,7 @@
                 <div class="input-wrapper">
                     <input type="password" id="confirm-password" name="confirm-password" placeholder="Powtórz hasło">
                 </div>
-                <button class="login-button">Zarejestruj</button>
+                <button onclick="window.location.href='/verify'" class="login-button">Zarejestruj</button>
             </form>
         </div>
     </div>    
