--- a/io_prj_server/views/guest.ejs
+++ b/io_prj_server/views/guest.ejs
@@ -14,9 +14,10 @@
             <ul>
                 <li><a href="/projects">Projekty</a></li>
                 <li><a href="/updates">Update'y</a></li>
-                <li><a href="/info">Informacje</a></li>
-                <li><a href="/help">Pomoc</a></li>
+                <li><a href="/about">Informacje</a></li>
+                <li><a href="/faq">Pomoc</a></li>
               <li>  <a href="/login" class="blue-button">Zaloguj się</a></li>
+              <li>  <a href="/register" class="blue-button">Zarejestruj się</a></li>
             </ul>
         </nav>
     </header>
