--- a/io_prj_server/views/login.ejs
+++ b/io_prj_server/views/login.ejs
@@ -15,7 +15,7 @@
                 <div class="input-wrapper">
                     <input type="password" id="password" name="password" placeholder="Hasło">
                 </div>
-                <button class="login-button">Zaloguj</button>
+                <button onclick="window.location.href='/logged'" class="login-button">Zaloguj</button>
             </form>
         </div>
     </div>
