--- a/io_prj_server/views/about.ejs
+++ b/io_prj_server/views/about.ejs
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
     <meta charset="UTF-8">
     <title>About</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
 </head>
+
 <body>
     <header>
         <div id="brand">
@@ -25,13 +27,16 @@
     <main id="main_about">
         <section id="about">
             <h1>O nas</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis, vitae praesentium consectetur deserunt reiciendis illum? 
-                Neque rem quod fuga ipsum totam, nihil enim dolorem? Quod reprehenderit deleniti rem atque beatae. 
-                Provident facilis eos et voluptates quas? Asperiores architecto aliquam labore excepturi sint, nemo officiis
-                 quasi aut quia, voluptatem perferendis repudiandae!
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis, vitae praesentium consectetur deserunt
+                reiciendis illum?
+                Neque rem quod fuga ipsum totam, nihil enim dolorem? Quod reprehenderit deleniti rem atque beatae.
+                Provident facilis eos et voluptates quas? Asperiores architecto aliquam labore excepturi sint, nemo
+                officiis
+                quasi aut quia, voluptatem perferendis repudiandae!
             </p>
         </section>
     </main>
 
 </body>
+
 </html>
