--- a/io_prj_server/views/login.ejs
+++ b/io_prj_server/views/login.ejs
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
     <meta charset="UTF-8">
     <title>Logowanie</title>
     <link rel='stylesheet' href='/stylesheets/login-style.css' />
 </head>
+
 <body>
     <div class="login-panel">
         <div class="login-form">
@@ -15,9 +17,10 @@
                 <div class="input-wrapper">
                     <input type="password" id="password" name="password" placeholder="Hasło">
                 </div>
-                <button onclick="window.location.href='/logged'" class="login-button">Zaloguj</button>
+                <button onclick="window.location.href='/'" class="login-button">Zaloguj</button>
             </form>
         </div>
     </div>
 </body>
+
 </html>
