--- a/io_prj_server/views/frontpage_guest.ejs
+++ b/io_prj_server/views/frontpage_guest.ejs
@@ -18,8 +18,8 @@
         <li><a href="/updates">Update'y</a></li>
         <li><a href="/about">Informacje</a></li>
         <li><a href="/faq">Pomoc</a></li>
-        <li> <a href="/login" class="blue-button">Zaloguj się</a></li>
-        <li> <a href="/register" class="blue-button">Zarejestruj się</a></li>
+        <li> <a href="/user/login" class="blue-button">Zaloguj się</a></li>
+        <li> <a href="/user/register" class="blue-button">Zarejestruj się</a></li>
       </ul>
     </nav>
   </header>
