--- a/io_prj_server/public/stylesheets/login-style.css
+++ b/io_prj_server/public/stylesheets/login-style.css
@@ -67,3 +67,9 @@
     align-items: center;
     text-align: center;
   }
+
+  .error-message {
+    color: red;
+    margin-bottom: 10px;
+    text-align: center;
+}
