--- a/io_prj_server/views/register.ejs
+++ b/io_prj_server/views/register.ejs
@@ -10,17 +10,20 @@
 <body>
     <div class="login-panel">
         <div class="login-form">
-            <form>
+            <% if (error) { %>
+                <div class="error-message"><%= error %></div>
+            <% } %>
+            <form method="POST" action="/user/register">
                 <div class="input-wrapper">
-                    <input type="email" id="email" name="email" placeholder="Adres email">
+                    <input type="email" id="email" name="email" placeholder="Adres email" required>
                 </div>
                 <div class="input-wrapper">
-                    <input type="password" id="password" name="password" placeholder="Hasło">
+                    <input type="password" id="password" name="password" placeholder="Hasło" required>
                 </div>
                 <div class="input-wrapper">
-                    <input type="password" id="confirm-password" name="confirm-password" placeholder="Powtórz hasło">
+                    <input type="password" id="confirm-password" name="confirm-password" placeholder="Powtórz hasło" required>
                 </div>
-                <button onclick="window.location.href='/verify'" class="login-button">Zarejestruj</button>
+                <button type="submit" class="login-button">Zarejestruj</button>
             </form>
         </div>
     </div>
