login, register, logout - done

--- a/io_prj_server/views/frontpage_user.ejs
+++ b/io_prj_server/views/frontpage_user.ejs
@@ -19,7 +19,7 @@
         <li><a href="/about">Informacje</a></li>
         <li><a href="/faq">Pomoc</a></li>
         <li><a href="/profil" class="blue-button">Profil</a></li>
-        <li><a href="/wyloguj" class="blue-button">Wyloguj się</a></li>
+        <li><a href="/user/logout" class="blue-button">Wyloguj się</a></li>
       </ul>
     </nav>
   </header>
