--- a/io_prj_server/views/login.ejs
+++ b/io_prj_server/views/login.ejs
@@ -10,18 +10,20 @@
 <body>
     <div class="login-panel">
         <div class="login-form">
-            <% if (error) { %>
-                <div class="error-message"><%= error %></div>
-            <% } %>
-            <form method="POST" action="/user/login">
-                <div class="input-wrapper">
-                    <input type="text" id="username" name="username" placeholder="Login" required>
+            <% if (typeof error !=='undefined' ) { %>
+                <div class="error-message">
+                    <%= error %>
                 </div>
-                <div class="input-wrapper">
-                    <input type="password" id="password" name="password" placeholder="Hasło" required>
-                </div>
-                <button type="submit" class="login-button">Zaloguj</button>
-            </form>
+                <% } %>
+                    <form method="POST" action="/user/login">
+                        <div class="input-wrapper">
+                            <input type="email" id="email" name="email" placeholder="E-mail" required>
+                        </div>
+                        <div class="input-wrapper">
+                            <input type="password" id="pass" name="pass" placeholder="Hasło" required>
+                        </div>
+                        <button type="submit" class="login-button">Zaloguj</button>
+                    </form>
         </div>
     </div>
 </body>
