added some hrefs

--- a/io_prj_server/views/followed_projects.ejs
+++ b/io_prj_server/views/followed_projects.ejs
@@ -16,7 +16,7 @@
     </div>
     <nav>
       <ul>
-        <li><a href="/projekty" aria-label="Projekty">Projekty</a></li>
+        <li><a href="/project_list" aria-label="Projekty">Projekty</a></li>
         <li><a href="/update" aria-label="Update'y">Update'y</a></li>
         <li><a href="/about" aria-label="Informacje">Informacje</a></li>
         <li><a href="/faq" aria-label="Pomoc">Pomoc</a></li>
