--- a/io_prj_server/views/frontpage_user.ejs
+++ b/io_prj_server/views/frontpage_user.ejs
@@ -14,7 +14,7 @@
     </div>
     <nav>
       <ul>
-        <li><a href="/projekty">Projekty</a></li>
+        <li><a href="/project_list">Projekty</a></li>
         <li><a href="/update">Update'y</a></li>
         <li><a href="/about">Informacje</a></li>
         <li><a href="/faq">Pomoc</a></li>
@@ -27,7 +27,7 @@
   <div class="logged-buttons">
     <nav>
       <ul>
-        <li><a href="/add-project" class="blue-button">Dodaj projekt</a></li>
+        <li><a href="/project_create" class="blue-button">Dodaj projekt</a></li>
         <li><a href="/my-projects" class="blue-button">Moje projekty</a></li>
         <li><a href="/followed-projects" class="blue-button">Śledzone projekty</a></li>
       </ul>
