--- a/io_prj_server/views/project_create.ejs
+++ b/io_prj_server/views/project_create.ejs
@@ -14,14 +14,13 @@
     <div id="brand">
       <h1>MatchMates</h1>
     </div>
-    <nav>
-      <ul>
-        <li><a href="/projekty">Projekty</a></li>
+    <nav>        
+        <li><a href="/project_list">Projekty</a></li>
         <li><a href="/update">Update'y</a></li>
         <li><a href="/about">Informacje</a></li>
         <li><a href="/faq">Pomoc</a></li>
         <li><a href="/profil" class="blue-button">Profil</a></li>
-        <li><a href="/wyloguj" class="blue-button">Wyloguj się</a></li>
+        <li><a href="/user/logout" class="blue-button">Wyloguj się</a></li>
       </ul>
     </nav>
   </header>
