--- a/io_prj_server/views/project_list.ejs
+++ b/io_prj_server/views/project_list.ejs
@@ -14,7 +14,7 @@
     </div>
     <nav>
       <ul>
-        <li><a href="/projekty">Projekty</a></li>
+        <li><a href="/project_list">Projekty</a></li>
         <li><a href="/update">Update'y</a></li>
         <li><a href="/about">Informacje</a></li>
         <li><a href="/faq">Pomoc</a></li>
