--- a/io_prj_server/views/followed_projects.ejs
+++ b/io_prj_server/views/followed_projects.ejs
@@ -16,79 +16,85 @@
     </div>
     <nav>
       <ul>
-        <li><a href="/projekty" aria-label="Projekty">Projekty</a></li>
-        <li><a href="/update" aria-label="Update'y">Update'y</a></li>
-        <li><a href="/about" aria-label="Informacje">Informacje</a></li>
-        <li><a href="/faq" aria-label="Pomoc">Pomoc</a></li>
-        <li><a href="/profil" class="blue-button" aria-label="Profil">Profil</a></li>
-        <li><a href="/wyloguj" class="blue-button" aria-label="Wyloguj się">Wyloguj się</a></li>
+        <li><a href="/projects">Projekty</a></li>
+        <li><a href="/updates">Update'y</a></li>
+        <li><a href="/about">Informacje</a></li>
+        <li><a href="/faq">Pomoc</a></li>
+        <% if (user.is_guest) { %>
+          <li> <a href="/user/login" class="blue-button">Zaloguj się</a></li>
+          <li> <a href="/user/register" class="blue-button">Zarejestruj się</a></li>
+          <% } else { %>
+            <li><a href="/profil" class="blue-button">Profil</a></li>
+            <li><a href="/user/logout" class="blue-button">Wyloguj się</a></li>
+            <% } %>
       </ul>
     </nav>
   </header>
 
-  <div class="logged-buttons">
-    <nav>
-      <ul>
-        <li><a href="/add-project" class="blue-button" aria-label="Dodaj projekt">Dodaj projekt</a></li>
-        <li><a href="/my-projects" class="blue-button" aria-label="Moje projekty">Moje projekty</a></li>
-        <li><a href="/followed-projects" class="blue-button" aria-label="Śledzone projekty">Śledzone projekty</a></li>
-      </ul>
-    </nav>
-  </div>
-
-  <main>
-    <section id="content">
-      <div class="project-container">
-        <div class="project-header">
-            <h2 class="project-title">Tytuł Projektu</h2>
-            <span class="technologies">Technologie: HTML, CSS, JS</span>
-        </div>
-        <hr>
-        <p class="project-description">Opis projektu...</p>
-        <div class="project-meta">
-          <p>Autorzy: Jan Kowalski, Anna Nowak</p>
-          <p>Uczestnicy: Maria Wiśniewska, Piotr Zieliński</p>
-        </div>
-        <a href="/apply" class="blue-button">Aplikuj</a>
-      </div>
-      <div class="project-container">
-        <div class="project-header">
-            <h2 class="project-title">Tytuł Projektu</h2>
-            <span class="technologies">Technologie: HTML, CSS, JS</span>
-        </div>
-        <hr>
-        <p class="project-description">Opis projektu...</p>
-        <div class="project-meta">
-          <p>Autorzy: Jan Kowalski, Anna Nowak</p>
-          <p>Uczestnicy: Maria Wiśniewska, Piotr Zieliński</p>
-        </div>
-        <a href="/apply" class="blue-button">Aplikuj</a>
-      </div>
-      <div class="project-container">
-        <div class="project-header">
-            <h2 class="project-title">Tytuł Projektu</h2>
-            <span class="technologies">Technologie: HTML, CSS, JS</span>
-        </div>
-        <hr>
-        <p class="project-description">Opis projektu...</p>
-        <div class="project-meta">
-          <p>Autorzy: Jan Kowalski, Anna Nowak</p>
-          <p>Uczestnicy: Maria Wiśniewska, Piotr Zieliński</p>
-        </div>
-        <a href="/apply" class="blue-button">Aplikuj</a>
-      </div>
-    </section>
-    <aside>
-        <div class="filter-container">
-          <a href="/filter" class="blue-button">Filtruj</a>
-          <ul class="filter-list">
-            <li>Filtr 1</li>
-            <li>Filtr 2</li>
-            <li>Filtr 3</li>
-          </ul>
-        </div>
-      </aside>
-  </main>
+  <% if (!user.is_guest) { %>
+    <div class="logged-buttons">
+      <nav>
+        <ul>
+          <li><a href="/add-project" class="blue-button">Dodaj projekt</a></li>
+          <li><a href="/my-projects" class="blue-button">Moje projekty</a></li>
+          <li><a href="/followed-projects" class="blue-button">Śledzone projekty</a></li>
+        </ul>
+      </nav>
+    </div>
+    <% } %>
+      <main>
+        <section id="content">
+          <div class="project-container">
+            <div class="project-header">
+              <h2 class="project-title">Tytuł Projektu</h2>
+              <span class="technologies">Technologie: HTML, CSS, JS</span>
+            </div>
+            <hr>
+            <p class="project-description">Opis projektu...</p>
+            <div class="project-meta">
+              <p>Autorzy: Jan Kowalski, Anna Nowak</p>
+              <p>Uczestnicy: Maria Wiśniewska, Piotr Zieliński</p>
+            </div>
+            <a href="/apply" class="blue-button">Aplikuj</a>
+          </div>
+          <div class="project-container">
+            <div class="project-header">
+              <h2 class="project-title">Tytuł Projektu</h2>
+              <span class="technologies">Technologie: HTML, CSS, JS</span>
+            </div>
+            <hr>
+            <p class="project-description">Opis projektu...</p>
+            <div class="project-meta">
+              <p>Autorzy: Jan Kowalski, Anna Nowak</p>
+              <p>Uczestnicy: Maria Wiśniewska, Piotr Zieliński</p>
+            </div>
+            <a href="/apply" class="blue-button">Aplikuj</a>
+          </div>
+          <div class="project-container">
+            <div class="project-header">
+              <h2 class="project-title">Tytuł Projektu</h2>
+              <span class="technologies">Technologie: HTML, CSS, JS</span>
+            </div>
+            <hr>
+            <p class="project-description">Opis projektu...</p>
+            <div class="project-meta">
+              <p>Autorzy: Jan Kowalski, Anna Nowak</p>
+              <p>Uczestnicy: Maria Wiśniewska, Piotr Zieliński</p>
+            </div>
+            <a href="/apply" class="blue-button">Aplikuj</a>
+          </div>
+        </section>
+        <aside>
+          <div class="filter-container">
+            <a href="/filter" class="blue-button">Filtruj</a>
+            <ul class="filter-list">
+              <li>Filtr 1</li>
+              <li>Filtr 2</li>
+              <li>Filtr 3</li>
+            </ul>
+          </div>
+        </aside>
+      </main>
 </body>
 
 </html>
