and refresh jwt script (backend, frontend) and favicon

--- a/io_prj_server/views/faq.ejs
+++ b/io_prj_server/views/faq.ejs
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>FAQ - Pomoc</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.png">
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <script type="module" src="/javascripts/refresh_jwt.js"></script>
 </head>
 
 <body>
@@ -14,7 +16,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="/projects">Projekty</a></li>
+                <li><a href="/">Projekty</a></li>
                 <li><a href="/updates">Update'y</a></li>
                 <li><a href="/about">Informacje</a></li>
                 <li><a href="/faq">Pomoc</a></li>
