--- a/io_prj_server/views/followed_projects.ejs
+++ b/io_prj_server/views/followed_projects.ejs
@@ -6,7 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="MatchMates - Platforma do zarządzania projektami i współpracy.">
   <title>Strona Główna</title>
+  <link rel="icon" type="image/x-icon" href="/images/favicon.png">
   <link rel="stylesheet" href="/stylesheets/style.css" />
+  <script type="module" src="/javascripts/refresh_jwt.js"></script>
 </head>
 
 <body>
@@ -16,7 +18,7 @@
     </div>
     <nav>
       <ul>
-        <li><a href="/projects">Projekty</a></li>
+        <li><a href="/">Projekty</a></li>
         <li><a href="/updates">Update'y</a></li>
         <li><a href="/about">Informacje</a></li>
         <li><a href="/faq">Pomoc</a></li>
