--- a/io_prj_server/views/login.ejs
+++ b/io_prj_server/views/login.ejs
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Logowanie</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.png">
     <link rel='stylesheet' href='/stylesheets/login-style.css' />
+    <script type="module" src="/javascripts/refresh_jwt.js"></script>
 </head>
 
 <body>
