--- a/io_prj_server/views/frontpage.ejs
+++ b/io_prj_server/views/frontpage.ejs
@@ -4,7 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Strona Główna</title>
+  <link rel="icon" type="image/x-icon" href="/images/favicon.png">
   <link rel='stylesheet' href='/stylesheets/style.css' />
+  <script type="module" src="/javascripts/refresh_jwt.js"></script>
 </head>
 
 <body>
@@ -14,7 +16,7 @@
     </div>
     <nav>
       <ul>
-        <li><a href="/projects">Projekty</a></li>
+        <li><a href="/">Projekty</a></li>
         <li><a href="/updates">Update'y</a></li>
         <li><a href="/about">Informacje</a></li>
         <li><a href="/faq">Pomoc</a></li>
@@ -33,7 +35,7 @@
     <div class="logged-buttons">
       <nav>
         <ul>
-          <li><a href="/add-project" class="blue-button">Dodaj projekt</a></li>
+          <li><a href="/project_create" class="blue-button">Dodaj projekt</a></li>
           <li><a href="/my-projects" class="blue-button">Moje projekty</a></li>
           <li><a href="/followed-projects" class="blue-button">Śledzone projekty</a></li>
         </ul>
