--- a/io_prj_server/views/project_view.ejs
+++ b/io_prj_server/views/project_view.ejs
@@ -4,8 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Strona Główna</title>
+  <link rel="icon" type="image/x-icon" href="/images/favicon.png">
   <link rel='stylesheet' href='/stylesheets/style.css' />
   <link rel='stylesheet' href='/stylesheets/project_view.css' />
+  <script type="module" src="/javascripts/refresh_jwt.js"></script>
   <style>
 
   </style>
@@ -18,7 +20,7 @@
     </div>
     <nav>
       <ul>
-        <li><a href="/project_list">Projekty</a></li>
+        <li><a href="/">Projekty</a></li>
         <li><a href="/update">Update'y</a></li>
         <li><a href="/about">Informacje</a></li>
         <li><a href="/faq">Pomoc</a></li>
@@ -33,15 +35,18 @@
         <h1 class="project-title" style="font-size: 32px;">Tytuł projektu</h1>
         <h2 style="font-size: 24px;">Opis</h2>
         <div class="description">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod tortor eget velit malesuada, sit amet pharetra est volutpat.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod tortor eget velit malesuada, sit amet
+            pharetra est volutpat.</p>
         </div>
         <h2 style="font-size: 24px;">Technologie</h2>
         <div class="technologies">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod tortor eget velit malesuada, sit amet pharetra est volutpat.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod tortor eget velit malesuada, sit amet
+            pharetra est volutpat.</p>
         </div>
         <h2 style="font-size: 24px;">Oczekiwania</h2>
         <div class="expectations">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod tortor eget velit malesuada, sit amet pharetra est volutpat.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod tortor eget velit malesuada, sit amet
+            pharetra est volutpat.</p>
         </div>
         <div id="authors">
           <h2 style="font-size: 24px;">Autorzy</h2>
@@ -60,57 +65,70 @@
       </div>
 
     </section>
-    
+
     <aside>
     </aside>
   </main>
-<div class="interact" style="margin-left: auto; margin-right: auto; padding: 10px; width: 50%; display: flex; justify-content: space-between;">
-  <div style="display: flex; align-items: center;">
-    <a href="#" style="display: flex; align-items: center; text-decoration: none;">
-      <p style="margin-right: 5px;">Polub</p>
-      <svg style="margin-right: 5px;" width="24px" height="24px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <g clip-path="url(#clip0_15_121)">
-          <rect width="24" height="24" fill="white"/>
-          <path d="M3 12.5C3 11.3954 3.89543 10.5 5 10.5H6C7.10457 10.5 8 11.3954 8 12.5V18.5C8 19.6046 7.10457 20.5 6 20.5H5C3.89543 20.5 3 19.6046 3 18.5V12.5Z" stroke="#000000" stroke-linecap="round" stroke-linejoin="round"/>
-          <path d="M8 12.5C9 12.5 13 10 13 5C13 3 16 3 16 5C16 7 16 8 15 10.5H21C21.5523 10.5 22 10.9477 22 11.5V14.7396C22 15.2294 21.8202 15.7022 21.4948 16.0683L18.5967 19.3287C18.2172 19.7557 17.6731 20 17.1019 20H10.3333C10.117 20 9.90643 19.9298 9.73333 19.8L8 18.5" stroke="#000000" stroke-linecap="round" stroke-linejoin="round"/>
-        </g>
-      </svg>
-      <div id="like_count">0</div>
-    </a>
-  </div>
-  
-  <div style="display: flex; align-items: center;">
-    <a href="#" style="display: flex; align-items: center; text-decoration: none;">
-      <p style="margin-right: 5px;">Skomentuj</p>
-      <svg style="margin-right: 5px;" width="24px" height="24px" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
-       
-        <title>comment-2</title>
-        <desc>Created with Sketch Beta.</desc>
-        <defs>
-    
-    </defs>
-        <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
-            <g id="Icon-Set" sketch:type="MSLayerGroup" transform="translate(-152.000000, -255.000000)" fill="#000000">
-                <path d="M168,281 C166.832,281 165.704,280.864 164.62,280.633 L159.912,283.463 L159.975,278.824 C156.366,276.654 154,273.066 154,269 C154,262.373 160.268,257 168,257 C175.732,257 182,262.373 182,269 C182,275.628 175.732,281 168,281 L168,281 Z M168,255 C159.164,255 152,261.269 152,269 C152,273.419 154.345,277.354 158,279.919 L158,287 L165.009,282.747 C165.979,282.907 166.977,283 168,283 C176.836,283 184,276.732 184,269 C184,261.269 176.836,255 168,255 L168,255 Z M175,266 L161,266 C160.448,266 160,266.448 160,267 C160,267.553 160.448,268 161,268 L175,268 C175.552,268 176,267.553 176,267 C176,266.448 175.552,266 175,266 L175,266 Z M173,272 L163,272 C162.448,272 162,272.447 162,273 C162,273.553 162.448,274 163,274 L173,274 C173.552,274 174,273.553 174,273 C174,272.447 173.552,272 173,272 L173,272 Z" id="comment-2" sketch:type="MSShapeGroup">
-    
-    </path>
-            </g>
-        </g>
-      </svg>
-      <div id="comment_count">0</div>
-    </a>
-  </div>
+  <div class="interact"
+    style="margin-left: auto; margin-right: auto; padding: 10px; width: 50%; display: flex; justify-content: space-between;">
+    <div style="display: flex; align-items: center;">
+      <a href="#" style="display: flex; align-items: center; text-decoration: none;">
+        <p style="margin-right: 5px;">Polub</p>
+        <svg style="margin-right: 5px;" width="24px" height="24px" viewBox="0 0 24 24" fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <g clip-path="url(#clip0_15_121)">
+            <rect width="24" height="24" fill="white" />
+            <path
+              d="M3 12.5C3 11.3954 3.89543 10.5 5 10.5H6C7.10457 10.5 8 11.3954 8 12.5V18.5C8 19.6046 7.10457 20.5 6 20.5H5C3.89543 20.5 3 19.6046 3 18.5V12.5Z"
+              stroke="#000000" stroke-linecap="round" stroke-linejoin="round" />
+            <path
+              d="M8 12.5C9 12.5 13 10 13 5C13 3 16 3 16 5C16 7 16 8 15 10.5H21C21.5523 10.5 22 10.9477 22 11.5V14.7396C22 15.2294 21.8202 15.7022 21.4948 16.0683L18.5967 19.3287C18.2172 19.7557 17.6731 20 17.1019 20H10.3333C10.117 20 9.90643 19.9298 9.73333 19.8L8 18.5"
+              stroke="#000000" stroke-linecap="round" stroke-linejoin="round" />
+          </g>
+        </svg>
+        <div id="like_count">0</div>
+      </a>
+    </div>
 
-  <div style="display: flex; align-items: center;">
-    <a href="#" style="display: flex; align-items: center; text-decoration: none;">
-      <p style="margin-right: 5px;">Śledź</p>
-      <svg style="margin-right: 5px;" width="24px" height="24px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path fill-rule="evenodd" clip-rule="evenodd" d="M12 6.00019C10.2006 3.90317 7.19377 3.2551 4.93923 5.17534C2.68468 7.09558 2.36727 10.3061 4.13778 12.5772C5.60984 14.4654 10.0648 18.4479 11.5249 19.7369C11.6882 19.8811 11.7699 19.9532 11.8652 19.9815C11.9483 20.0062 12.0393 20.0062 12.1225 19.9815C12.2178 19.9532 12.2994 19.8811 12.4628 19.7369C13.9229 18.4479 18.3778 14.4654 19.8499 12.5772C21.6204 10.3061 21.3417 7.07538 19.0484 5.17534C16.7551 3.2753 13.7994 3.90317 12 6.00019Z" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-      </svg>
-      <div id="follow_count">0</div>
-    </a>
+    <div style="display: flex; align-items: center;">
+      <a href="#" style="display: flex; align-items: center; text-decoration: none;">
+        <p style="margin-right: 5px;">Skomentuj</p>
+        <svg style="margin-right: 5px;" width="24px" height="24px" viewBox="0 0 32 32" version="1.1"
+          xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+          xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
+
+          <title>comment-2</title>
+          <desc>Created with Sketch Beta.</desc>
+          <defs>
+
+          </defs>
+          <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
+            <g id="Icon-Set" sketch:type="MSLayerGroup" transform="translate(-152.000000, -255.000000)" fill="#000000">
+              <path
+                d="M168,281 C166.832,281 165.704,280.864 164.62,280.633 L159.912,283.463 L159.975,278.824 C156.366,276.654 154,273.066 154,269 C154,262.373 160.268,257 168,257 C175.732,257 182,262.373 182,269 C182,275.628 175.732,281 168,281 L168,281 Z M168,255 C159.164,255 152,261.269 152,269 C152,273.419 154.345,277.354 158,279.919 L158,287 L165.009,282.747 C165.979,282.907 166.977,283 168,283 C176.836,283 184,276.732 184,269 C184,261.269 176.836,255 168,255 L168,255 Z M175,266 L161,266 C160.448,266 160,266.448 160,267 C160,267.553 160.448,268 161,268 L175,268 C175.552,268 176,267.553 176,267 C176,266.448 175.552,266 175,266 L175,266 Z M173,272 L163,272 C162.448,272 162,272.447 162,273 C162,273.553 162.448,274 163,274 L173,274 C173.552,274 174,273.553 174,273 C174,272.447 173.552,272 173,272 L173,272 Z"
+                id="comment-2" sketch:type="MSShapeGroup">
+
+              </path>
+            </g>
+          </g>
+        </svg>
+        <div id="comment_count">0</div>
+      </a>
+    </div>
+
+    <div style="display: flex; align-items: center;">
+      <a href="#" style="display: flex; align-items: center; text-decoration: none;">
+        <p style="margin-right: 5px;">Śledź</p>
+        <svg style="margin-right: 5px;" width="24px" height="24px" viewBox="0 0 24 24" fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" clip-rule="evenodd"
+            d="M12 6.00019C10.2006 3.90317 7.19377 3.2551 4.93923 5.17534C2.68468 7.09558 2.36727 10.3061 4.13778 12.5772C5.60984 14.4654 10.0648 18.4479 11.5249 19.7369C11.6882 19.8811 11.7699 19.9532 11.8652 19.9815C11.9483 20.0062 12.0393 20.0062 12.1225 19.9815C12.2178 19.9532 12.2994 19.8811 12.4628 19.7369C13.9229 18.4479 18.3778 14.4654 19.8499 12.5772C21.6204 10.3061 21.3417 7.07538 19.0484 5.17534C16.7551 3.2753 13.7994 3.90317 12 6.00019Z"
+            stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+        </svg>
+        <div id="follow_count">0</div>
+      </a>
+    </div>
   </div>
-</div>
 
   <div id="comment_section">
     <div class="comment">
@@ -119,7 +137,8 @@
       </div>
       <div class="comment-text">
         <div class="username">User 1:</div>
-        <div class="comment-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero.</div>
+        <div class="comment-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent
+          libero.</div>
       </div>
     </div>
     <div class="comment">
@@ -128,7 +147,8 @@
       </div>
       <div class="comment-text">
         <div class="username">User 2:</div>
-        <div class="comment-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero.</div>
+        <div class="comment-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent
+          libero.</div>
       </div>
     </div>
     <div class="comment">
@@ -137,12 +157,13 @@
       </div>
       <div class="comment-text">
         <div class="username">User 3:</div>
-        <div class="comment-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero.</div>
+        <div class="comment-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent
+          libero.</div>
       </div>
     </div>
   </div>
-  
-  
+
+
 </body>
 
 </html>
