--- a/io_prj_server/views/register.ejs
+++ b/io_prj_server/views/register.ejs
@@ -32,6 +32,7 @@
                                 required>
                         </div>
                         <div class="input-wrapper">
+                            <label for="birth_date">Data urodzenia:</label>
                             <input type="date" id="birth_date" name="birth_date" required>
                         </div>
                         <div class="input-wrapper">
