--- a/io_prj_server/views/followed_projects.ejs
+++ b/io_prj_server/views/followed_projects.ejs
@@ -37,7 +37,7 @@
     <div class="logged-buttons">
       <nav>
         <ul>
-          <li><a href="/add-project" class="blue-button">Dodaj projekt</a></li>
+          <li><a href="/project/create" class="blue-button">Dodaj projekt</a></li>
           <li><a href="/my-projects" class="blue-button">Moje projekty</a></li>
           <li><a href="/followed-projects" class="blue-button">Śledzone projekty</a></li>
         </ul>
