--- a/io_prj_server/views/frontpage.ejs
+++ b/io_prj_server/views/frontpage.ejs
@@ -35,13 +35,14 @@
     <div class="logged-buttons">
       <nav>
         <ul>
-          <li><a href="/project_create" class="blue-button">Dodaj projekt</a></li>
+          <li><a href="/project/create" class="blue-button">Dodaj projekt</a></li>
           <li><a href="/my-projects" class="blue-button">Moje projekty</a></li>
           <li><a href="/followed-projects" class="blue-button">Śledzone projekty</a></li>
         </ul>
       </nav>
     </div>
     <% } %>
+
       <main>
         <section id="content">
           <div class="post-container">
