add infinite scroll

--- a/io_prj_server/views/frontpage.ejs
+++ b/io_prj_server/views/frontpage.ejs
@@ -7,6 +7,7 @@
   <link rel="icon" type="image/x-icon" href="/images/favicon.png">
   <link rel='stylesheet' href='/stylesheets/style.css' />
   <script type="module" src="/javascripts/refresh_jwt.js"></script>
+  <script type="module" src="/javascripts/infinite_scroll.js"></script>
 </head>
 
 <body>
@@ -45,24 +46,7 @@
 
       <main>
         <section id="content">
-          <div class="post-container">
-            <div class="post-title">Post Title 1</div>
-            <div class="post">
-              <p>Content for post 1</p>
-            </div>
-          </div>
-          <div class="post-container">
-            <div class="post-title">Post Title 2</div>
-            <div class="post">
-              <p>Content for post 2</p>
-            </div>
-          </div>
-          <div class="post-container">
-            <div class="post-title">Post Title 3</div>
-            <div class="post">
-              <p>Content for post 3</p>
-            </div>
-          </div>
+
         </section>
         <aside>
         </aside>
