--- a/io_prj_server/views/project_view.ejs
+++ b/io_prj_server/views/project_view.ejs
@@ -16,7 +16,7 @@
 <body>
   <header>
     <div id="brand">
-      <h1>MatchMates</h1>
+      <h1><a href="/">MatchMates</a></h1>
     </div>
     <nav>
       <ul>
