--- a/io_prj_server/public/stylesheets/project_view.css
+++ b/io_prj_server/public/stylesheets/project_view.css
@@ -185,3 +185,9 @@ body {
   .comment-content {
     flex: 1;
   }
+
+  .title-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
