--- a/io_prj_server/public/stylesheets/style.css
+++ b/io_prj_server/public/stylesheets/style.css
@@ -265,7 +265,7 @@ nav ul li a:hover {
   font-family: 'Inter';
   font-style: normal;
   font-weight: 600;
-  font-size: 20px;
+  font-size: 40px;
   line-height: 130%;
 }
 
@@ -386,4 +386,67 @@ hr {
   padding: 10px;
   margin-bottom: 10px;
   text-align: center;
+}
+
+
+#email, #topic
+ {
+  background-color: #fafaf5;
+  border-radius: 10px;
+  margin-bottom: 20px;
+  border: solid;
+  border-color: #e6e6e6;
+  width: 20%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  resize: none;
+}
+
+#message
+{
+  background-color: #fafaf5;
+  border-radius: 10px;
+  margin-bottom: 20px;
+  border: solid;
+  border-color: #e6e6e6;
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  resize: none;
+}
+
+
+
+label {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 20px;
+}
+
+.email-box,
+.topic-box
+{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  height: fit-content;
+}
+
+.tresc-box
+{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  height: fit-content;
 }
