fixed bad href in add project

--- a/io_prj_server/views/project_create.ejs
+++ b/io_prj_server/views/project_create.ejs
@@ -36,7 +36,7 @@
     <div class="logged-buttons">
       <nav>
         <ul>
-          <li><a href="/project_create" class="blue-button">Dodaj projekt</a></li>
+          <li><a href="/project/create" class="blue-button">Dodaj projekt</a></li>
           <li><a href="/my-projects" class="blue-button">Moje projekty</a></li>
           <li><a href="/followed-projects" class="blue-button">Śledzone projekty</a></li>
         </ul>
